--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,32 @@
 <html>
-
+<head>
+    <title>
+        article-one|abijith ka
+    </title>
+</head>    
+<body>
+    <div>
+        <a href='/'>home</a>
+    </div>
+    <hr/>
+    <h3>
+        article-one
+    </h3>
+    <div>
+        sep 18, 2016
+    </div>
+    <div>
+        <p>
+            This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.
+        </p>
+        
+        <p>
+            This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.
+        </p>
+        
+        <p>
+            This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.
+        </p>
+    </div>
+</body>
 </html>
