[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,18 @@
         article-one|abijith ka
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            color:grey;
+            font-family:san serif;
+            
+        }
+    </style> 
 </head>    
 <body>
+<div class="container">
     <div>
         <a href='/'>home</a>
     </div>
@@ -29,5 +39,7 @@
             This is the content of my first article.This is the content of my first article.This is the content of my first article.This is the content of my first article.
         </p>
     </div>
+</div>
 </body>
+
 </html>
