--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,8 +4,22 @@
         article-three|abijith ka
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>    
+
+<style>
+        .container {
+         max-width: 800px;
+         margin: 0 auto;
+         color: #5A5A5A;
+         font-family: san serif;
+         padding-top: 60px;
+         padding-left: 20px;
+         padding-right: 20px;
+            
+        }
+</style> 
+</head> 
 <body>
+<div class="container">
     <div>
         <a href='/'>home</a>
     </div>
@@ -21,5 +35,6 @@
             This is the content of my third article.
         </p>
     </div>
+</div>
 </body>
 </html>
