--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,8 +4,21 @@
         article-two|abijith ka
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+<style>
+        .container {
+         max-width: 800px;
+         margin: 0 auto;
+         color: #5A5A5A;
+         font-family: san serif;
+         padding-top: 60px;
+         padding-left: 20px;
+         padding-right: 20px;
+            
+        }
+</style> 
 </head>    
 <body>
+<div class="container">    
     <div>
         <a href='/'>home</a>
     </div>
@@ -21,5 +34,6 @@
             This is the content of my second article.
         </p>
     </div>
+</div>
 </body>
 </html>
