--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://scontent-mrs1-1.xx.fbcdn.net/v/t1.0-9/11138688_1619872414964475_9222793727313236872_n.jpg?oh=2bafefb3ae29ca38599d38d0127d2f1d&oe=5838AA34" class="img-medium"/>
         </div>
         <br>
         <div id='main-text' class="center text-big bold">
