--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
          </div>
          <hr/>
          <div class="footer">
-             this a button<button id="counter">click me!</button>has been clicked <span id="counter">0</span>times
+             this a button<button id="counter">click me!</button>has been clicked <span id="count">0</span>times
          </div>
         
        
