[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,34 +1,17 @@
 <!doctype html>
-<html>
-    <head>
+ <html>
+     <head>
         <link href="/ui/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="container">
-        <div class="center">
-            <img id='madi' src="https://scontent-mrs1-1.xx.fbcdn.net/v/t1.0-9/11138688_1619872414964475_9222793727313236872_n.jpg?oh=2bafefb3ae29ca38599d38d0127d2f1d&oe=5838AA34" class="img-medium"/>
-        </div>
-        <br>
-        <h3>personal</h3>
-        <div>
-            Hi am abijith ka and iam studieng 11 std.
-        </div>
-        <hr/>
-         <h3>professional</h3>
-        <div>
-           iam studying
+     </head>
+     <body>
+         <div class="center">
+             <img src="/ui/madi.png" class="img-medium"/>
          </div>
-         <hr/>
-         <h3>login to unlock</h3>
-        <div>
-           <input type="text" id="username" placeholder="username" />
-           <input type="password" id="password" />
-           <input type="submit" id="submit_btn" />
+         <br>
+         <div class="center text-big bold">
+             Hi! I am your webapp.
          </div>
-         <hr/>
-         <div class="footer">
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
+         <script type="text/javascript" src="/ui/main.js">
+         </script>
     </body>
-</html>
+ </html>
