[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,10 @@
          </div>
          <br>
          <div class="center text-big bold">
-             Hi! I am your webapp.
+             Hi! this is my first web app
+         </div>
+         <div>
+             some  new web app
          </div>
          <script type="text/javascript" src="/ui/main.js">
          </script>
