[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,11 +9,7 @@
          </div>
          <br>
          <div class="center text-big bold">
-             Hi! this is my first web app
-          <div>
-             <br>
-             some  new web app
-         </div>
+             Hi!i am abijith, this is my first web app,some  new web app
          </div>
          
          <script type="text/javascript" src="/ui/main.js">
