--- a/ui/index.html
+++ b/ui/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
  <html>
+     <title>
+         web kid
+     </title>
      <head>
         <link href="/ui/style.css" rel="stylesheet" />
      </head>
@@ -9,7 +12,7 @@
          </div>
          <br>
          <div class="center text-big bold">
-             Hi!i am abijith, this is my first web app,<br> some  new web app
+             Hi! i am abijith, this is my first web app,<br> this is for kids
          </div>
          
          <script type="text/javascript" src="/ui/main.js">
