[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,15 +4,7 @@
          web kid
      </title>
      <head>
-         <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
-<style>
-body,h1 {font-family: "Raleway", Arial, sans-serif}
-h1 {letter-spacing: 6px}
-.w3-row-padding img {margin-bottom: 12px}
-</style>
+      <link href="/ui/style.css" rel="stylesheet" />
  </head>
      <body>
          <div class="center">
