[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,13 +11,12 @@
              <img src="https://scontent.fbom3-1.fna.fbcdn.net/v/t1.0-9/14457454_1781254775492904_560717934125688801_n.jpg?oh=959de2334cc5dc046adf563fd13842fc&oe=58CC5E6C" class="img-medium"/>
          </div>
          <br>
-         <div>
+         <div class="center">
              <h1>
              personal information
              </h1>
              <p>my name is abijith.k.a i am studying in 11th standard</p>
-         </div>
-         <div>
+         
              <h2>proffesional</h2>
              <p> my job is to study</p>
              <br>
