[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,11 +16,11 @@
              </h1>
              <p>my name is abijith.k.a i am studying in 11th standard</p>
          
-             <h2>proffesional</h2>
+             <h2>profesional</h2>
              <p> my job is to study</p>
              <br>
              and also
-             <li> dezign</li>
+             <li> design</li>
              <li> make frients</li>
              <li> and do good things</li>
          </div>
