[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -25,6 +25,9 @@
              <li> and do good things</li>
          </div>
          
+         <div class="tooltip">Hover over me
+  <span class="tooltiptext">Tooltip text</span>
+</div>
          
          <script type="text/javascript" src="/ui/main.js">
          </script>
