--- a/ui/about.html
+++ b/ui/about.html
@@ -1,1 +1,8 @@
-
+<!doctype html>
+ <html>
+     <link href="/ui/about.css" rel="stylesheet" />
+     
+     <h1> About </h1>
+     <h2> this is my first web app.and this have so many drawback. just think that this only a app of a beginer.</h2>
+     <p> just think we are not alone</p>
+     <a> then we can give anything to anyone</a>
