[imad-console] Updates ui/about.html

--- a/ui/about.html
+++ b/ui/about.html
@@ -3,8 +3,8 @@
       <link href="/ui/about.css" rel="stylesheet" />
  </head>
  <body>
-     <h1> About </h1>
-     <h2> this is my first web app.and this have so many drawback. just think that this only a app of a beginer.</h2>
-     <p> just think we are not alone</p>
-     <a> then we can give anything to anyone</a>
+     <h1> THIS IS ABOUT ME </h1>
+     <h2> AND ABOUT YOU.</h2>
+     <p> JUST THINK THAT WE ARE NOT ALONE. THEN WE CAN GIVE ANYTHING TO ANYONE. HUMANS NOT TO MADE TO GIVE, THE POURPOSE OF THAT SAPIENS IS TO USE.</p>
+     <a> HUMANS IS NOT THE WORLD,</a>
 </body>
