--- a/ui/about.html
+++ b/ui/about.html
@@ -3,8 +3,10 @@
       <link href="/ui/about.css" rel="stylesheet" />
  </head>
  <body>
+     <div class="center">
      <h1> THIS IS ABOUT ME </h1>
      <h2> AND ABOUT YOU.</h2>
      <p> JUST THINK THAT WE ARE NOT ALONE. THEN WE CAN GIVE ANYTHING TO ANYONE. HUMANS NOT TO MADE TO GIVE, THE POURPOSE OF THAT SAPIENS IS TO USE.</p>
      <a> HUMANS IS NOT THE WORLD,</a>
+     </div>
 </body>
