[imad-console] Updates ui/about.html

--- a/ui/about.html
+++ b/ui/about.html
@@ -4,6 +4,14 @@
       <link href="/ui/about.css" rel="stylesheet" />
  </head>
  <body>
+     
+      <ul>
+  <li><a class="active" href="home">Home</a></li>
+  <li><a href="news">News</a></li>
+  <li><a href="contact">Contact</a></li>
+  <li><a href="about">About</a></li>
+</ul>
+
      <div class="center">
          
 
