--- a/ui/index.html
+++ b/ui/index.html
@@ -15,6 +15,7 @@
       <link href="/ui/style.css" rel="stylesheet" />
  </head>
   
+  <script type="text/javascript" src="/ui/main.js" />
   
      <body>
          
