[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,7 +24,7 @@
          <p>My name is abijith. can't do great thing be the greatness.</p>
          
          <div class="footer" >
-             <p>cloud.imad.hasura.io</p>
+             <a>cloud.imad.hasura.io</a>
          </div>
     
     </body>
