--- a/ui/index.html
+++ b/ui/index.html
@@ -36,8 +36,8 @@
 
 <div class="responsive">
   <div class="img">
-    <a target="_blank" href="img_fjords.jpg">
-      <img src="img_fjords.jpg" alt="Trolltunga Norway" width="300" height="200">
+    <a target="_blank" href="artflow_201610041817.png">
+      <img src="artflow_201610041817.png" alt="Trolltunga Norway" width="300" height="200">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
@@ -46,8 +46,8 @@
 
 <div class="responsive">
   <div class="img">
-    <a target="_blank" href="img_forest.jpg">
-      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+    <a target="_blank" href="artflow_201508301916.png">
+      <img src="artflow_201508301916.png" alt="Forest" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
@@ -55,8 +55,8 @@
 
 <div class="responsive">
   <div class="img">
-    <a target="_blank" href="img_lights.jpg">
-      <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+    <a target="_blank" href="artflow_201508301916.png">
+      <img src="artflow_201508301916.png" alt="Northern Lights" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
@@ -64,8 +64,8 @@
 
 <div class="responsive">
   <div class="img">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+    <a target="_blank" href="12063458_1642241182727598_5985956548461313171_n.jpg">
+      <img src="12063458_1642241182727598_5985956548461313171_n.jpg" alt="Mountains" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
