--- a/ui/index.html
+++ b/ui/index.html
@@ -36,8 +36,8 @@
 
 <div class="responsive">
   <div class="img">
-    <a target="_blank" href="artflow_201610041817.png">
-      <img src="artflow_201610041817.png" alt="Trolltunga Norway" width="300" height="200">
+    <a target="_blank" href="madi.png">
+      <img src="madi.png" alt="Trolltunga Norway" width="300" height="200">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
