--- a/ui/index.html
+++ b/ui/index.html
@@ -37,7 +37,7 @@
 <div class="responsive">
   <div class="img">
     <a target="_blank" href="madi.png">
-      <img src="madi.png" alt="Trolltunga Norway" width="300" height="200">
+      <img src="madi.png" alt="madi" width="300" height="200">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
