[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -34,7 +34,7 @@
 <div class="responsive">
   <div class="img">
     <a target="_blank" href="/ui/madi.png">
-      <img src="madi.png" alt="madi" width="300" height="200">
+      <img src="/ui/madi.png" alt="madi" width="300" height="200">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
