--- a/ui/index.html
+++ b/ui/index.html
@@ -36,7 +36,7 @@
     <a target="_blank" href="/ui/madi.png">
       <img src="/ui/madi.png" alt="madi" width="300" height="200">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">madi of hasura</div>
   </div>
 </div>
 
