[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -27,9 +27,10 @@
     
 
     
-   
-         <h2>Responsive Image Gallery</h2>
-<h4>Resize the browser window to see the effect.</h4>
+   <hr>
+         <h2>Gallery</h2>
+   </hr>
+
 
 <div class="responsive">
   <div class="img">
