--- a/ui/index.html
+++ b/ui/index.html
@@ -27,9 +27,10 @@
     
 
     
-   <hr>
+   <div class="gallery">
          <h2>Gallery</h2>
-   </hr>
+   <hr>
+   </div>
 
 
 <div class="responsive">
