--- a/ui/about.html
+++ b/ui/about.html
@@ -1,6 +1,6 @@
 <!doctype html>
  <html>
-     <body-background = "https://www.google.co.in/search?q=background+images&espv=2&biw=1301&bih=678&tbm=isch&imgil=ZmWcZ1UOePDW_M%253A%253BgBSzPH4jB0FLSM%253Bhttp%25253A%25252F%25252Fwww.istockphoto.com%25252Fphotos%25252Fbackgrounds&source=iu&pf=m&fir=ZmWcZ1UOePDW_M%253A%252CgBSzPH4jB0FLSM%252C_&usg=__MteWHzoIbwlg1NOOqHf-icyHIMs%3D&ved=0ahUKEwio6Jyeo8vQAhVIOJQKHQEnCHUQyjcIMg&ei=Ugs8WKj3LMjw0ASBzqCoBw#imgrc=ZmWcZ1UOePDW_M%3A" /> 
+     <body-background = "520976858.jpg" > 
  <head>
       <link href="/ui/about.css" rel="stylesheet" />
          <ul>
