[imad-console] Updates ui/about.html

--- a/ui/about.html
+++ b/ui/about.html
@@ -1,6 +1,6 @@
 <!doctype html>
  <html>
-    <body background="520976858 .jpg">
+    <body bgcolor=red>
  <head>
       <link href="/ui/about.css" rel="stylesheet" />
          <ul>
