--- a/ui/index.html
+++ b/ui/index.html
@@ -46,7 +46,7 @@
 <div class="responsive">
   <div class="img">
     <a target="_blank" href="/artflow_201508301916.png">
-      <img src="/artflow_201508301916.png" alt="Forest" width="600" height="400">
+      <img src="/artflow_201508301916.png" alt="guppy" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
   </div>
