[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -45,7 +45,7 @@
 
 <div class="responsive">
   <div class="img">
-    <a target="_blank" href=/ui/artflow_201508301916.png">
+    <a target="_blank" href="/ui/artflow_201508301916.png">
       <img src="/ui/artflow_201508301916.png" alt="guppy" width="600" height="400">
     </a>
     <div class="desc">Add a description of the image here</div>
